--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
+    "mongoose": "^4.6.1",
     "path": "^0.12.7",
     "socket.io": "^1.4.8"
   }
