--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "angular-socket-io": "^0.7.0",
     "angular": "^1.5.8",
     "jquery": "^3.1.0",
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "angular-scroll-glue": "^2.0.7"
   }
 }
