--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "express": "^4.14.0",
     "mongoose": "^4.6.1",
     "path": "^0.12.7",
-    "socket.io": "^1.4.8"
+    "socket.io": "^1.4.8",
+    "bower": "1.7.9"
+  },
+  "scripts": {
+    "postinstall": "./node_modules/bower/bin/bower install"
   }
 }
