--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-preset-react": "^6.11.1",
     "bower": "1.7.9",
     "express": "^4.14.0",
+    "lodash": "^4.16.2",
     "mongoose": "^4.6.1",
     "path": "^0.12.7",
     "socket.io": "^1.4.8"
@@ -21,9 +22,14 @@
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
     "gulp": "^3.9.1",
+    "gulp-angular-templatecache": "^2.0.0",
     "gulp-babel": "^6.1.2",
+    "gulp-bower-files": "^0.2.7",
+    "gulp-concat": "^2.6.0",
     "gulp-develop-server": "^0.5.2",
     "gulp-livereload": "^3.8.1",
+    "gulp-load-plugins": "^1.3.0",
+    "gulp-ng-annotate": "^2.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
     "gulp-streamify": "^1.0.2",
