--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-bower-files": "^0.2.7",
     "gulp-concat": "^2.6.0",
     "gulp-develop-server": "^0.5.2",
+    "gulp-jshint": "^2.0.1",
     "gulp-livereload": "^3.8.1",
     "gulp-load-plugins": "^1.3.0",
     "gulp-ng-annotate": "^2.0.0",
@@ -34,6 +35,7 @@
     "gulp-sass": "^2.3.2",
     "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^2.0.0",
+    "jshint": "^2.9.3",
     "vinyl-source-stream": "^1.1.0"
   }
 }
